# TeamLab2021

./: README.md
gdwgui/: CMakeLists.txt  CMakeLists.txt.user.4218b6b  InputDialog.cpp  InputDialog.h  StartDialog.h  connectionnotifier.h  datadecimator.cpp  datadecimator.h  filedialog.cpp  filedialog.h  graph.cpp  graph.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  quabrowser.cpp  quabrowser.h  quaconfigurationwidget.cpp  quaconfigurationwidget.h  util.cpp  util.h
